post push fix for bug#40595 Addition of hander function was_semi_consistent_read